Kampo skill works. Herb item works. Kampo formula item works. Logout image no longer creates scrollbars when you click it. removeItem() function uncommented and fixed in commands.php. removeItem now used in inventory_mod.

--- a/deploy/www/css/style.css
+++ b/deploy/www/css/style.css
@@ -1494,7 +1494,7 @@ iframe{
 
 #logout {
     float:right;
-	margin-right: 2px;
+	margin-right: 3px;
 }
 
 #logout a {
